# upx-test-build-with-zig

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-upx-with-clang.yml  build-upx-with-zig.yml  test-clang-targets.yml  test-deterministic-builds.yml  test-glibc-versions.yml  test-macos.yml
src/: simple_c.c  simple_x.cpp
